# notes-api

./: README.md  pyproject.toml
api-notes/: main.py
api-notes/routes/: notes.py
