[tool.poetry]
name = "fast-studies"
version = "0.1.0"
description = ""
authors = ["Aline Correia <afcs.cin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
